<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chevstrap</string>
    <string name="MessageOpenRbx">You may not be able to open Roblox through this</string>
    <string name="SaveText">Save</string>
    <string name="LearnMoreText">Learn More</string>
    <string name="LoadText">Load</string>
    <string name="CatchIt">Catch</string>
    <string name="FastFlagsEditorTXT">Fast Flags Editor</string>
    <string name="Warning1">Warning</string>
    <string name="Message1">Message</string>
    <string name="NameFastFlag">Name a Fast Flag</string>
    <string name="Exit12">Exit</string>
    <string name="NoWifi">No connection or unstable connection</string>
    <string name="NoRoot1">Your device does not have root access</string>
    <string name="NoRoot2">Run this app in a cloning app, and make sure your installed Roblox app has also been added to the cloning app</string>
    <string name="StorageFullMessage">Make sure you have enough storage for this app to run properly, would you like to exit the app?</string>
    <string name="Aboutt">About</string>
    <string name="TypeHere">Type Here</string>
    <string name="Contributors">Contributors</string>
    <string name="FFlagschanged">FFlags have been successfully changed</string>
    <string name="JustAMessageFastFlagNotLoaded">If the fast flags fail to load after launching Roblox, try restarting your device, then launch Roblox again</string>
    <string name="Cancel">Cancel</string>
    <string name="Update">Update</string>
    <string name="PleaseUpdate">This app is outdated, Please update this app to the latest one</string>
    <string name="configure_settings">Configure Settings</string>
    <string name="launch_roblox">Launch Roblox</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="copy_server_link">Copy Server Link</string>
    <string name="rejoin">Rejoin</string>
    <string name="game_name">Game Name</string>
    <string name="remove_blur_effect_on_roblox_gui">Remove blur effect on roblox gui</string>
    <string name="remove_blur_effect">Remove Blur Effect</string>
    <string name="sends_detailed_ping_information_to_the_roblox_console">Sends detailed ping information to the Roblox console</string>
    <string name="testing_debugs">Testing Debugs</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="faster_loading">Faster loading</string>
    <string name="decreases_wait_time_by_optimizing_loading_speed">Decreases wait time by optimizing loading speed</string>
    <string name="ping_breakdown">Ping breakdown</string>
    <string name="configure_bytes_of_data_that_are_transferred_over_your_network">Configure bytes of data that are transferred over your network.</string>
    <string name="mtu_size">MTU Size</string>
    <string name="prevent_lag_spikes_by_smoothing_out_the_network_output">Prevent lag spikes by smoothing out the network output</string>
    <string name="reduce_lag_spikes">Reduce Lag Spikes</string>
    <string name="allows_you_to_change_the_font_size_on_the_roblox_menu">Allows you to change the font size on the Roblox menu</string>
    <string name="font_size">Font Size</string>
    <string name="hide_guis">Hide GUIs</string>
    <string name="toggled_with_keyboard_shortcuts_input_id_you_re_in">Toggled with keyboard shortcuts. Input id you\'re in.</string>
    <string name="the_text_resizer_on_the_roblox_game_menu_will_appear_if_it_s_enabled">The text resizer on the roblox game menu will appear if it\'s enabled</string>
    <string name="enable_text_size_changer">Enable Text Size Changer</string>
    <string name="enabling_this_will_force_the_fps_display">Enabling this will force the FPS Display</string>
    <string name="enable_fps_display">Enable FPS Display</string>
    <string name="adjust_the_quality_textures_higher_levels_increase_quality">Adjust the quality textures. Higher levels increase quality</string>
    <string name="texture_quality">Texture quality</string>
    <string name="dynamic_resolution">Dynamic resolution</string>
    <string name="when_choosing_a_dynamic_resolution_beware_may_causes_performance_issues">When choosing a dynamic resolution, Beware, may causes performance issues!</string>
    <string name="choosen_one_will_be_force_enabled_in_all_games_beware_may_causes_lighting_issues">Chosen one will be force enabled in all games. Beware, may causes lighting issues!</string>
    <string name="preferred_lighting_technology">Preferred lighting technology</string>
    <string name="framerate_limit">Framerate limit</string>
    <string name="set_0_to_enable_v_sync">Set 0 to enable V-Sync</string>
    <string name="replace_roblox_skybox_with_the_gray_one">Replace Roblox skybox with the gray one</string>
    <string name="force_gray_sky">Force gray sky</string>
    <string name="remove_roblox_built_in_grass">Remove roblox built in grass</string>
    <string name="remove_grass">Remove Grass</string>
    <string name="disable_effects_such_as_sunrays_blooming_and_more_effects">Disable effects such as sunrays, blooming, and more effects</string>
    <string name="disable_post_processing_effects">Disable post-processing effects</string>
    <string name="disable_roblox_lighting_and_shadow">Disable Roblox lighting and shadow</string>
    <string name="disable_shadow">Disable Shadow</string>
    <string name="configure_the_rendering_api_for_roblox_setting_to_vulkan_may_cause_some_bugs">Configure the rendering API for Roblox. Setting to Vulkan may cause some bugs!</string>
    <string name="rendering_mode">Rendering Mode</string>
    <string name="smooth_out_jagged_edges_higher_values_increases_smoothness">Smooth out jagged edges. Higher values increases smoothness</string>
    <string name="anti_aliasing_quality_msaa">Anti-aliasing quality (MSAA)</string>
    <string name="if_it_s_enabled_it_required_refresh_the_page">if it\'s enabled, it required refresh the page</string>
    <string name="reset_everything_to_default">Reset everything to default</string>
    <string name="disabling_this_will_prevent_anything_configured_here_from_being_applied_to_roblox">Disabling this will prevent anything configured here from being applied to Roblox.</string>
    <string name="allow_chevstrap_to_manage_fast_flags">Allow Chevstrap to manage Fast Flags</string>
    <string name="learn_more_about_fast_flags_what_these_presets_do_and_how_to_use_them">Learn more about Fast Flags, what these presets do, and how to use them.</string>
    <string name="help">Help</string>
    <string name="control_how_specific_roblox_engine_parameters_and_features_are_configured">Control how specific Roblox engine parameters and features are configured.</string>
    <string name="show_values_of_specified_flags_during_runtime_each_flag_is_comma_separated">Show values of specified flags during runtime. Each flag is comma separated</string>
    <string name="flag_state">Flag state</string>
    <string name="_0">0</string>
    <string name="network_and_input_delay">Network and Input Delay</string>
    <string name="user_interface_and_layout">User interface and Layout</string>
    <string name="rendering_and_graphics">Rendering and Graphics</string>
    <string name="chosen_one_will_force_save_fast_flags_to_the_preferred_roblox_app_and_force_launch_preferred_roblox_app_but_only_if_needed">Chosen one will force save Fast Flags to the preferred Roblox app and force launch preferred Roblox app but only if needed</string>
    <string name="clearing_any_cache_on_roblox_before_launching_it">Clearing any cache on Roblox before launching it</string>
    <string name="preferred_roblox_app">Preferred Roblox app</string>
    <string name="configure_what_chevstrap_should_do_when_launching_roblox">Configure what Chevstrap should do when launching Roblox.</string>
    <string name="chosen_text_by_game">Chosen by game</string>
    <string name="automatic">Automatic</string>
    <string name="yes">Yes</string>
    <string name="phase1_voxel">Voxel (Phase 1)</string>
    <string name="phase2_shadow_map">Shadow Map (Phase 2)</string>
    <string name="phase3_future">Future (Phase 3)</string>
    <string name="phase4_unified">Unified (Phase 4)</string>
    <string name="fast_flags_editor">FFLags Editor</string>
    <string name="fast_flags_settings">FFLags Settings</string>
    <string name="integrations">Integrations</string>
    <string name="save_and_launch">Save And Launch</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="launcher">Launcher</string>
    <string name="chevstrap_settings">Chevstrap Settings</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="add_new">Add new</string>
    <string name="delete_selected">Delete selected</string>
    <string name="delete_all">Delete all</string>
    <string name="copy_json">Copy JSON</string>
    <string name="show_preset_flags">Show preset flags</string>
    <string name="configure_additional_functionality_for_use_with_roblox">Configure additional functionality for use with Roblox.</string>
    <string name="activity_tracking">Activity tracking</string>
    <string name="enable_activity_tracking">Enable activity tracking</string>
    <string name="allows_for_chevstrap_to_detect_what_roblox_games_you_re_playing_certain_features_may_require_this">Allows for Chevstrap to detect what Roblox games you\'re playing. Certain features may require this.</string>
    <string name="when_in_game_you_ll_be_able_to_see_where_your_server_is_located_via_ipinfo_io">When in-game, you\'ll be able to see where your server is located via ipinfo.io.</string>
    <string name="query_server_location">Query server location</string>
    <string name="without_these_people_this_app_probably_wouldn_t_exist">Without these people, this app probably wouldn\'t exist</string>
    <string name="license">License</string>
    <string name="use_legacy_finder_path">Use Legacy Finder Path</string>
    <string name="replace_the_current_finder_path_with_the_legacy_finder_path">Replace the current finder path with the legacy finder path</string>
</resources>